--- a/FilmsApp/FilmsApp/Views/Base.lproj/Main.storyboard
+++ b/FilmsApp/FilmsApp/Views/Base.lproj/Main.storyboard
@@ -243,7 +243,7 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="128" id="Gtv-ek-oad"/>
                                 </constraints>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="hdR-Ze-OHE">
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="hdR-Ze-OHE">
                                     <size key="itemSize" width="128" height="128"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -257,7 +257,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image04" translatesAutoresizingMaskIntoConstraints="NO" id="RUR-mS-PIt">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image04" translatesAutoresizingMaskIntoConstraints="NO" id="RUR-mS-PIt">
                                                     <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="128" id="Ef4-GT-26a"/>
@@ -267,6 +267,7 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstAttribute="height" secondItem="RUR-mS-PIt" secondAttribute="height" id="BD2-BP-YoH"/>
+                                                <constraint firstAttribute="trailing" secondItem="RUR-mS-PIt" secondAttribute="trailing" id="eCC-aB-Nhw"/>
                                                 <constraint firstItem="RUR-mS-PIt" firstAttribute="leading" secondItem="Bcx-JM-kQD" secondAttribute="leading" id="uiz-sr-usp"/>
                                                 <constraint firstItem="RUR-mS-PIt" firstAttribute="top" secondItem="Bcx-JM-kQD" secondAttribute="top" id="xlQ-jK-oR0"/>
                                             </constraints>
@@ -314,6 +315,7 @@
                                 <state key="normal" image="play.fill" catalog="system"/>
                                 <connections>
                                     <action selector="goToGAlleryButtonAction:" destination="Brc-pL-8pe" eventType="touchUpInside" id="Riq-cu-tO1"/>
+                                    <segue destination="lPT-nd-rPo" kind="show" id="yar-Vx-KCk"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -370,11 +372,12 @@
             <objects>
                 <viewController id="lPT-nd-rPo" customClass="FilmPicsViewController" customModule="FilmsApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="fQZ-Yb-Egf">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="8qP-Zo-Rnk"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <navigationItem key="navigationItem" id="m6g-So-tgF"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vCo-b3-Jqf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
