--- a/FilmsApp/FilmsApp/Views/FavoriteFilmViewCell.xib
+++ b/FilmsApp/FilmsApp/Views/FavoriteFilmViewCell.xib
@@ -9,7 +9,11 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FavoriteFilmViewCell" customModule="FilmsApp" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FavoriteFilmViewCell" customModule="FilmsApp" customModuleProvider="target">
+            <connections>
+                <outlet property="deleteButton" destination="3z3-ba-ROo" id="sIW-oX-WVz"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FavoriteFilmCell" id="b92-3h-anf" customClass="FavoriteFilmViewCell" customModule="FilmsApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="172" height="359"/>
