--- a/FilmsApp/FilmsApp/Views/FavoriteFilmViewCell.xib
+++ b/FilmsApp/FilmsApp/Views/FavoriteFilmViewCell.xib
@@ -1,19 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FavoriteFilmViewCell" customModule="FilmsApp" customModuleProvider="target">
-            <connections>
-                <outlet property="deleteButton" destination="3z3-ba-ROo" id="sIW-oX-WVz"/>
-            </connections>
-        </placeholder>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FavoriteFilmViewCell" customModule="FilmsApp" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FavoriteFilmCell" id="b92-3h-anf" customClass="FavoriteFilmViewCell" customModule="FilmsApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="172" height="359"/>
@@ -90,6 +86,7 @@
             <color key="backgroundColor" red="0.84556620114221359" green="0.94347796608380419" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <size key="customSize" width="172" height="359"/>
             <connections>
+                <outlet property="deleteButton" destination="3z3-ba-ROo" id="f6n-1s-hBU"/>
                 <outlet property="favoriteFilmTitleLabel" destination="a93-Q8-c7q" id="Fuz-yZ-wpu"/>
                 <outlet property="favoritePosterImageView" destination="T2N-PJ-Gqh" id="JLS-Ww-w7w"/>
                 <outlet property="favoriteRatingLabel" destination="0rK-gm-xBR" id="9xh-aY-aJW"/>
